<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2012 Daniel Kreischer, Christopher Holm, Christopher Schwardt

    This file is part of TeamMeet.

    TeamMeet is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    TeamMeet is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with TeamMeet.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">TeamMeet</string>
    <string name="preference_category_map">Map Settings</string>
    <string name="preference_category_xmpp">XMPP Settings</string>
    <string name="preference_category_xmpp_advanced">Advanced XMPP Settings</string>
    <string name="preference_auto_center_key">autoCenter</string>
    <string name="preference_auto_center_title">Follow Location</string>
    <string name="preference_auto_center_summary">Recenters map on your location.</string>
    <string name="preference_fullscreen_key">fullscreen</string>
    <string name="preference_fullscreen_title">Fullscreen</string>
    <string name="preference_fullscreen_summary">Show the map in fullscreen mode.</string>
    <string name="preference_satellite_key">satellite</string>
    <string name="preference_satellite_title">Satellite View</string>
    <string name="preference_satellite_summary">Show the map in satellite view.</string>
    <string name="preference_show_mate_names_key">showMateNames</string>
    <string name="preference_show_mate_names_title">Show Mate Names</string>
    <string name="preference_show_mate_names_summary">Show the name of the mate next to his position.</string>
    <string name="preference_navigation_mode_key">navigationMode</string>
    <string name="preference_navigation_mode_title">Navigation Mode</string>
    <string name="preference_navigation_mode_summary">Select mode for the navigation.</string>
    <string name="preference_user_id_key">userID</string>
    <string name="preference_user_id_title">Username</string>
    <string name="preference_user_id_summary">Your XMPP username (substring before the @).</string>
    <string name="preference_server_key">server</string>
    <string name="preference_server_title">Server</string>
    <string name="preference_server_summary">Your XMPP server (substring after the @).</string>
    <string name="preference_password_key">password</string>
    <string name="preference_password_title">Password</string>
    <string name="preference_password_summary">Your password for the XMPP account.</string>
    <string name="preference_conference_server_key">conferenceServer</string>
    <string name="preference_conference_server_title">Conference Server</string>
    <string name="preference_conference_server_summary">The server housing your teams conferences.</string>
    <string name="preference_autostart_key">autostart</string>
    <string name="preference_autostart_title">Autostart</string>
    <string name="preference_autostart_summary">Start and connect when device is booted.</string>
    <string name="menu_auto_center">Follow position</string>
    <string name="menu_fullscreen">Fullscreen</string>
    <string name="menu_goto_mylocation">Current location</string>
    <string name="menu_satellite_view">Satellite map</string>
    <string name="roster_menu_connect">Connect to server</string>
    <string name="roster_menu_connect_condensed">Connect</string>
    <string name="roster_menu_disconnect">Disconnect from server</string>
    <string name="roster_menu_disconnect_condensed">Disconnect</string>
    <string name="roster_menu_show_map">Show map</string>
    <string name="roster_menu_show_map_condensed">Map</string>
    <string name="roster_menu_form_team">From a new team</string>
    <string name="roster_menu_form_team_condensed">Form team</string>
    <string name="roster_menu_add_contact">Add Contact</string>
    <string name="roster_menu_add_contact_condensed">Add</string>
    <string name="roster_menu_settings">Settings</string>
    <string name="roster_menu_settings_condensed">Settings</string>
    <string name="roster_menu_exit">Exit</string>
    <string name="roster_menu_exit_condensed">Exit</string>
    <string name="no_contacts">No contacts to display</string>
    <string name="add_contact_dialog_title">Add a new Contact</string>
    <string name="form_team_dialog_title">Form a new Team</string>
    <string name="join_team_dialog_title">Join a Team</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_teams">Teams</string>
    <string name="tab_teamchat">Chat</string>
    <string name="tab_map">Map</string>
    <string name="context_invite">Invite to team</string>
    <string name="context_invite_condensed">Invite</string>
    <string name="context_add_contact_to_group">Add Contact to Group</string>
    <string name="context_add_contact_to_group_condensed">Add Contact</string>
    <string name="context_remove_contact">Remove Contact</string>
    <string name="context_remove_contact_condensed">Remove</string>
    <string name="context_open_map">Open team in map</string>
    <string name="context_open_map_condensed">Open map</string>
    <string name="context_open_chat">Open chat</string>
    <string name="context_open_chat_condensed">Chat</string>
    <string name="context_open_team_chat">Open team chat</string>
    <string name="context_open_team_chat_condensed">Open chat</string>
    <string name="context_leave_team">Leave Team</string>
    <string name="context_leave_team_condensed">Leave</string>
    <string name="no_teams">No teams to display</string>
    <string name="button_show_map">Show Map</string>
    <string name="button_show_roster">Show Roster</string>
    <string name="button_show_settings">Edit Settings</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_create">Create Team</string>
    <string name="button_add">Add</string>
    <string name="button_invite">Invite Mate</string>
    <string name="button_join">Join Team</string>
    <string name="button_decline">Decline</string>
    <string name="text_team_name">Team Name:</string>
    <string name="text_group_name">Group Name:</string>
    <string name="text_contact_name">Contact:</string>
    <string name="contact_status_description">The availability of the contact</string>
    <string name="notification_service_title_connected">TeamMeet is connected.</string>
    <string name="notification_service_title_disconnected">TeamMeet is disconnected.</string>
    <string name="notification_service_text_connected">Click to bring to front.</string>
    <string name="notification_service_text_disconnected">Click to bring to front.</string>
    <string name="broadcast_connection_state">de.teammeet.intent.category.XMPP_CONNECTION_STATE</string>
    <string name="broadcast_connected">de.teammeet.intent.action.CONNECTED</string>
    <string name="broadcast_disconnected">de.teammeet.indent.action.DISCONNECTED</string>
    <string name="broadcast_action_indicator">de.teammeet.intent.action.INDICATOR</string>
    <string name="broadcast_action_indicator_remove">de.teammeet.intent.action.INDICATOR_REMOVE</string>
    <string name="broadcast_action_teammate_update">de.teammeet.intent.action.TEAMMATE_UPDATE</string>
    <string name="broadcast_category_location">de.teammeet.intent.category.LOCATION</string>
    <string name="broadcast_teams_updated">de.teammeet.intent.action.TEAMS_UPDATED</string>
    <string name="description_send_button">send button</string>
    <string name="reason_team_invite">The team wants you!</string>
    <string name="reason_team_rejection">We\'re not soldiers!</string>
    <string name="reason_team_destroy">Everything dies, baby, that\'s a fact&#8230;</string>

</resources>