<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preference_category_xmpp" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_autostart_key"
            android:summary="@string/preference_autostart_summary"
            android:title="@string/preference_autostart_title" />

        <EditTextPreference
            android:name="@string/preference_user_id_key"
            android:defaultValue=""
            android:key="@string/preference_user_id_key"
            android:singleLine="true"
            android:summary="@string/preference_user_id_summary"
            android:title="@string/preference_user_id_title" />
        <EditTextPreference
            android:name="@string/preference_server_key"
            android:defaultValue=""
            android:key="@string/preference_server_key"
            android:singleLine="true"
            android:summary="@string/preference_server_summary"
            android:title="@string/preference_server_title" />
        <EditTextPreference
            android:name="@string/preference_password_key"
            android:defaultValue=""
            android:key="@string/preference_password_key"
            android:password="true"
            android:singleLine="true"
            android:summary="@string/preference_password_summary"
            android:title="@string/preference_password_title" />

        <PreferenceScreen android:title="@string/preference_category_xmpp_advanced" >
            <PreferenceCategory android:title="@string/preference_category_xmpp_advanced" >
                <EditTextPreference
                    android:name="@string/preference_conference_server_key"
                    android:defaultValue="conference.jabber.de"
                    android:key="@string/preference_conference_server_key"
                    android:singleLine="true"
                    android:summary="@string/preference_conference_server_summary"
                    android:title="@string/preference_conference_server_title" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceScreen android:title="@string/preference_category_map" >
        <PreferenceCategory android:title="@string/preference_category_map" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="@string/preference_auto_center_key"
                android:summary="@string/preference_auto_center_summary"
                android:title="@string/preference_auto_center_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="@string/preference_fullscreen_key"
                android:summary="@string/preference_fullscreen_summary"
                android:title="@string/preference_fullscreen_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="@string/preference_satellite_key"
                android:summary="@string/preference_satellite_summary"
                android:title="@string/preference_satellite_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/preference_show_mate_names_key"
                android:summary="@string/preference_show_mate_names_summary"
                android:title="@string/preference_show_mate_names_title" />

            <ListPreference
                android:defaultValue="w"
                android:entries="@array/preference_navigation_mode_entries"
                android:entryValues="@array/preference_navigation_mode_values"
                android:key="@string/preference_navigation_mode_key"
                android:summary="@string/preference_navigation_mode_summary"
                android:title="@string/preference_navigation_mode_title" />
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>