<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/roster_menu_connect"
        android:showAsAction="ifRoom|withText"
        android:title="@string/roster_menu_connect"
        android:titleCondensed="@string/roster_menu_connect_condensed"/>
    <item
        android:id="@+id/roster_menu_show_map"
        android:showAsAction="ifRoom|withText"
        android:title="@string/roster_menu_show_map"
        android:titleCondensed="@string/roster_menu_show_map_condensed"/>
    <item
        android:id="@+id/roster_menu_form_team"
        android:enabled="false"
        android:showAsAction="ifRoom|withText"
        android:title="@string/roster_menu_form_team"
        android:titleCondensed="@string/roster_menu_form_team_condensed"/>
    <item
        android:id="@+id/roster_menu_settings"
        android:showAsAction="ifRoom|withText"
        android:title="@string/roster_menu_settings"
        android:titleCondensed="@string/roster_menu_settings_condensed"/>
    <item
        android:id="@+id/roster_menu_exit"
        android:showAsAction="ifRoom|withText"
        android:title="@string/roster_menu_exit"
        android:titleCondensed="@string/roster_menu_exit_condensed"/>

</menu>