<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2012 Daniel Kreischer, Christopher Holm, Christopher Schwardt

    This file is part of TeamMeet.

    TeamMeet is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    TeamMeet is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with TeamMeet.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/auto_center"
        android:showAsAction="ifRoom"
        android:title="@string/menu_auto_center"/>
    <item
        android:id="@+id/goto_mylocation"
        android:icon="@drawable/device_access_location_found"
        android:showAsAction="ifRoom"
        android:title="@string/menu_goto_mylocation"/>
    <item
        android:id="@+id/satellite_view"
        android:icon="@drawable/location_map"
        android:showAsAction="ifRoom"
        android:title="@string/menu_satellite_view"/>
    <item
        android:id="@+id/fullscreen"
        android:icon="@drawable/av_full_screen"
        android:showAsAction="ifRoom"
        android:title="@string/menu_fullscreen"/>

</menu>